debug.yaml
---
# Source: homework/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homework-web
  strategy:
    rollingUpdate:
      maxSurge: 1 
      maxUnavailable: 1 
    type: RollingUpdate 
  template:
    metadata:
      labels:
        app: homework-web 
    spec:
      serviceAccountName: monitoring 
      nodeSelector:
        homework: "true" 
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: homework-pvc
        - name: config
          configMap:
            name: homework-configmap
        - name: config-nginx
          configMap:
            name: nginx-config
      containers:
      - name: web-server
        image: nginx:alpine
        readinessProbe:
          exec:
            command:
              - cat
              - /homework/index.html
        lifecycle:
          preStop:
            exec:
              command:
                - sh
                - c
                - rm -f /homework/index.html
        ports:
          - containerPort: 8000
        volumeMounts:
          - name: shared-volume
            mountPath: /homework
          - name: config
            mountPath: /conf
          - name: config-nginx
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
