homework-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homework-web
  strategy:
    rollingUpdate:
      maxSurge: 1 
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: homework-web
    spec:
      nodeSelector:
        homework: "true"
      volumes:
        - name: shared-volume
          emptyDir: {}
      initContainers:  # Исправлено: initContainers вместо containers
      - name: init-content
        image: ubuntu
        command: ['sh', '-c', 'echo "<html><body><h1>Web Server</h1><p>HOMEWORK</p></body></html>" > /init/index.html']
        volumeMounts:
          - name: shared-volume
            mountPath: /init
      containers:
      - name: web-server
        image: python:3.9
        readinessProbe:
          exec:
            command: ["cat", "/homework/index.html"]
        command: ['sh', '-c', 'cd /homework && python -m http.server 8000']
        lifecycle:
          preStop:
            exec:
              command: ['sh', '-c', 'rm -f /homework/index.html']
        ports:
          - containerPort: 8000
        volumeMounts:
          - name: shared-volume
            mountPath: /homework
