pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: homework-pod
  namespace: homework
  labels:
    app: homework-web
spec:
  volumes:
    - name: shared-volume
      emptyDir: {}

  containers:
    - name: web-server
      image: python:3.9-slim
      command: ['sh', '-c', 'cd /homework && python -m http.server 8000']
      lifecycle:
        preStop:
          exec:
            command: ['sh', '-c', 'rm -f /homework/index.html']
      ports:
        - containerPort: 8000
      volumeMounts:
        - name: shared-volume
          mountPath: /homework

  restartPolicy: Never
